增加dubbo.xml配置示例

--- a/dm-common/pom.xml
+++ b/dm-common/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>dm-common</artifactId>
     <name>dm-common</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
