增加购物车

--- a/dm-framework/dm-framework-api/pom.xml
+++ b/dm-framework/dm-framework-api/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>curator-x-discovery</artifactId>
         </dependency>
 
+        <!-- mybatis-plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.dm</groupId>
             <artifactId>dm-common</artifactId>
