--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
         <dubbo.version>2.7.8</dubbo.version>
         <dubbo.api.version>2.7.8.3</dubbo.api.version>
@@ -32,6 +31,7 @@
         <druid.version>1.2.4</druid.version>
         <fastjson.version>1.2.75</fastjson.version>
         <mybatis-pagehelper.version>1.3.0</mybatis-pagehelper.version>
+        <mybatis-plus.version>3.4.3</mybatis-plus.version>
         <swagger3.version>3.0.0</swagger3.version>
         <commons-lang3.version>3.10</commons-lang3.version>
         <commons-io.version>2.7</commons-io.version>
@@ -127,10 +127,18 @@
                 <version>${curator.version}</version>
             </dependency>
 
+            <!-- mybatis 分页插件 -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${mybatis-pagehelper.version}</version>
+            </dependency>
+
+            <!-- mybatis-plus -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
             </dependency>
 
             <dependency>
