--- a/dm-framework/dm-framework-impl/pom.xml
+++ b/dm-framework/dm-framework-impl/pom.xml
@@ -54,10 +54,10 @@
             <artifactId>curator-x-discovery</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>mysql</groupId>
