--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <modules>
         <module>dm-common</module>
         <module>dm-framework</module>
-        <module>dm-run</module>
         <module>dm-googs</module>
+        <module>dm-run</module>
     </modules>
 
     <properties>
@@ -77,6 +77,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-quartz</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
