--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>dm-framework</module>
         <module>dm-googs</module>
         <module>dm-run</module>
+        <module>dm-generator</module>
     </modules>
 
     <properties>
@@ -31,7 +32,8 @@
         <druid.version>1.2.4</druid.version>
         <fastjson.version>1.2.75</fastjson.version>
         <mybatis-pagehelper.version>1.3.0</mybatis-pagehelper.version>
-        <mybatis-plus.version>3.4.3</mybatis-plus.version>
+        <mybatis-plus.version>3.4.1</mybatis-plus.version>
+        <velocity-engine.version>2.3</velocity-engine.version>
         <swagger3.version>3.0.0</swagger3.version>
         <commons-lang3.version>3.10</commons-lang3.version>
         <commons-io.version>2.7</commons-io.version>
@@ -144,6 +146,20 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+
+            <!-- mybatis-plus代码自动生成器 -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+
+            <!-- mybatis-plus-generator依赖此组件 -->
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity-engine-core</artifactId>
+                <version>${velocity-engine.version}</version>
             </dependency>
 
             <dependency>
