--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.dm</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>dm-dubbo-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>dm-dubbo-parent</name>
