--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
                 <optional>true</optional>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter -->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>3.16.6</version>
+            </dependency>
+
             <!-- dubbo -->
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
