--- a/dm-common/pom.xml
+++ b/dm-common/pom.xml
@@ -15,14 +15,10 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- redisson -->
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <!-- dubbo api -->
