--- a/dm-run/dm-run-ui/src/main/resources/application.yml
+++ b/dm-run/dm-run-ui/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     host: 127.0.0.1
     port: 6379
     database: 1
+  # 自定义redisson配置
+  redisson:
+    # 自定义的key，RedissonConfig中配置使用
+    type: single
   servlet:
     multipart:
       # 单文件上传大小
